# safer-preview

./: .eslintignore  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: cargo-clippy.yml  cargo-fmt.yml  cargo-test.yml  chromatic.yml  npm-check.yml  npm-lint.yml  npm-test.yml  reuse-compliance.yml  semgrep.yml
.reuse/: dep5
.storybook/: main.js  preview-head.html  preview.js
docs/: icon.png.license  icon.svg.license
docs/adr/: 0000_template.md  0001_frameworks.md  README.md
docs/developer_manual/: README.md  backend.md  frontend.md
src/: app.d.ts  app.html  index.test.js
src-tauri/: .gitignore  Cargo.lock.license  Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json.license
src-tauri/src/: main.rs
src/lib/: Box.svelte  Button.svelte  FileInput.svelte  MainPage.svelte  Preview.svelte  SitaSingsTheBlues.png.license
src/routes/: +layout.js  +layout.svelte  +page.svelte
src/stories/: Box.stories.js  Button.stories.js  Button.svelte  FileInput.stories.js  Header.stories.js  Header.svelte  Introduction.mdx  MainPage.stories.js  Page.stories.js  Page.svelte  Preview.stories.js  button.css  header.css  icon.png.license  page.css
src/stories/assets/: plugin.svg.license
