# SPDX-FileCopyrightText: 2023 Gonzalo Bulnes Guilpain
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "safer-preview"
version = "0.1.0"
description = "An application to reveal images progressively, in order to preview them while taking care of yourself."
authors = ["Gonzalo Bulnes Guilpain"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/gonzalo-bulnes/safer-preview"
default-run = "safer-preview"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
